infra/kubernetes/ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
  labels:
    app: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama-container
        image: 559979279038.dkr.ecr.us-east-1.amazonaws.com/ollama-custom:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 11434
        resources:
          limits:
            cpu: "2"
            memory: "4Gi"
            # nvidia.com/gpu: 1
