infra/kubernetes/airflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      serviceAccountName: airflow-sa
      containers:
      - name: scheduler
        image: 559979279038.dkr.ecr.us-east-1.amazonaws.com/airflow-server:latest
        command: ["airflow", "scheduler"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      containers:
      - name: webserver
        image: 559979279038.dkr.ecr.us-east-1.amazonaws.com/airflow-server:latest
        command: ["airflow", "webserver"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver-service
  namespace: airflow
spec:
  type: LoadBalancer
  selector:
    app: airflow-webserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
