infra/kubernetes/train_and_mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow-server
        image: ghcr.io/mlflow/mlflow:latest
        ports:
        - containerPort: 5000

        command: ["mlflow", "server"]
        args:
          - "--host=0.0.0.0"
          - "--port=5000"
          - "--backend-store-uri=$(DATABASE_URL)"
          - "--default-artifact-root=s3://$(S3_BUCKET_NAME)/mlflow-artifacts"
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  selector:
    app: mlflow
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
##
